# file-inspector

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Inspector.cc  Inspector.h  Makefile.am  common.h  fstr.cc  fstr.h  inspector.cc  inspector.h  main.cc
src/Core/: ConfManager.cc  ConfManager.h  FileExplorer.cc  FileExplorer.h
src/Helper/: FileExplorer.cc  FileExplorer.h  Fstr.cc  Fstr.h  stlHelpers.h
src/Rules/: BasicRule.h
src/helper/: fstr.cc  fstr.h
